[package]
name = "Eth2ToNearRelay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { path = "../ext/types" }
tree_hash = { path = "../ext/tree_hash" }
merkle_proof = { path = "../ext/merkle_proof" }
serde_json = "1.0.74"
ethereum-types = "0.12.1"
reqwest = "*"
